[tool.poetry]
name = "mindie_turbo"
version = "0.1.0"
description = "Core utilities for the mindie_turbo package"
packages = [
    { include = "mindie_turbo", exclude = ["adapter", "adapter.*"] }
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
